Fixed filter bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
+<head>
+{% block head %}
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>
-      {% block title %}{% endblock %}
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {% block head %}{% endblock %}
-  </head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/style.css">
+  	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+
+{% endblock %}
+</head>
   <body>
     {% for msg in get_flashed_messages() %}
       <p class="flash-msg">
