--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
     </style>
   </head>
-  <body class="img js-fullheight" style="background-image: url(images/treebackground.jpg); background-size: cover;">
+  <body class="img js-fullheight" style="background-image: url(images/treebackground.jpg);">
     {% for msg in get_flashed_messages() %}
       <p class="flash-msg">
         {{ msg }}
