--- a/templates/map.html
+++ b/templates/map.html
@@ -1,50 +1,65 @@
 {% extends "base.html" %}
-{% block title %}Portland Trails{% endblock %}
-{% block head %}
 
+{% block title %}Portland Trails{% endblock %}
+
+{% block body %}
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 
-<h3>Portland Trails</h3>
-<!--The div element for the map -->
+<div class="title">
+    <h1>Portland Trails</h1>
+    
+    <div class="logoutButton">
+        <form action="/logout">
+            <input type="submit" class="form-control btn btn-primary submit px-3" style="width: 95%;" value="Logout" id="logout"/>
+        </form>
+    </div>
 
-<label for="trail">Trail Name:</label>
-<select name="filter" id="Top_Trail_Name">
-    <option value="select">Select</option>
-</select>
+    <!-- Filter Menu -->
 
-<label for="difficulty">Difficulty:</label>
-<select name="filter" id="Difficulty">
-    <option value="easy">Select</option>
-    <option value="easy">Easy</option>
-    <option value="moderate">Moderate</option>
-    <option value="hard">Hard</option>
-</select> 
+    <!-- Trail Dropdown -->
+    <label for="trail">Trail Name:</label>
+    <select name="filter" id="Top_Trail_Name">
+        <option value="select">Select</option>
+    </select>
 
-<label for="length">Length:</label>
-<input type="range" min="1" max="30" value="15" class="slider" name="filter" id="Length">
+    <!-- Difficulty Dropdown -->
+    <label for="difficulty">Difficulty:</label>
+        <select name="filter" id="Difficulty">
+            <option value="easy">Select</option>
+            <option value="easy">Easy</option>
+            <option value="moderate">Moderate</option>
+            <option value="hard">Hard</option>
+    </select> 
+
+    <!-- Length Dropdown -->
+    <label for="length">Length:</label>
+    <input type="range" min="1" max="30" value="15" class="slider" name="filter" id="Length">
+
+    <!-- Elevation Bar -->
+    <label for="elevation">Elevation:</label>
+    <input type="range" min="1" max="5000" value="15" class="slider" name="filter" id="Elevation">
+
+    <!-- Time Bar -->
+    <label for="time">Time:</label>
+    <input type="range" min="1" max="10" value="5" class="slider" name="filter" id="Time">
+
+    <!-- Route Type Dropdown -->
+    <label for="route type">Route Type:</label>
+    <select name="filter" id="RouteType">
+        <option value="loop">Select</option>
+        <option value="loop">Loop</option>
+        <option value="o">Out and Back</option>
+        <option value="point_to_point">Point to Point</option>
+    </select> 
 </div>
 
-<label for="elevation">Elevation:</label>
-<input type="range" min="1" max="5000" value="15" class="slider" name="filter" id="Elevation">
-</div>
+<!-- Trail Map -->
+<div id="map">My Map<img src="http://maps.gstatic.com/mapfiles/arrow-down.png" class="dropDownArrow"></div>
 
-<label for="time">Time:</label>
-<input type="range" min="1" max="10" value="5" class="slider" name="filter" id="Time">
-</div>
+<!-- Trail Review Section -->
 
-<label for="route type">Route Type:</label>
-<select name="filter" id="RouteType">
-    <option value="loop">Select</option>
-    <option value="loop">Loop</option>
-    <option value="o">Out and Back</option>
-    <option value="point_to_point">Point to Point</option>
-</select> 
-
-<div id="map">
-    <div class="dropDownControl" id="My Box">My Box<img src="http://maps.gstatic.com/mapfiles/arrow-down.png" class="dropDownArrow"></div>
-
-</div>
-<form action="/review" method="POST">
+<h5 class="title" style = "padding-top: 10px;">Submit Review</h5>
+<form style="text-align:center; width: 85%; margin-left: auto; margin-right: auto;" action="/review" method="POST">
     <div class="form-group">
         <select placeholder="Select Trail Name" class="form-control" name="filter" id="Bottom_Trail_Name">
             <option value="select">Select Trail</option>
@@ -57,71 +72,27 @@
       <input placeholder="Score" class="form-control" type="text" name="Score">
     </div>
     <div class="form-group">
-        <button type="submit" class="form-control btn btn-primary submit px-3">Submit Review</button>
+        <button type="submit" class="form-control btn btn-primary submit px-3" style="width: 20%;">Submit Review</button>
     </div>
-  </form>
-<div class="logoutButton">
-    <form action="/logout">
-        <input type="submit" value="Logout" id="logout"/>
-    </form>
-</div>
-</pre>
+</form>
+
 
 
 <style type="text/css">
   /* Set the size of the div element that contains the map */
   #map {
-    width: 100%;
-    height: 500px;
+    width: 90%;
+    height: 65%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .logoutButton{
     position:absolute;
     top:0;
     right:0;
-}
-
-.container-fluid {
-	height: auto;
-	background-color: #6ed3cf;
-    padding: 5px 0px 5px 5px;
-}
-
-.footer {
-    height: auto;
-    bottom: 0;
-    background-color: #6ed3cf;
-}
-
-.navbar-brand {
-    height: 14px;
-    color: #815DAB;
-    font-size: 35px;
-    size: 180%;
-}
-
-
-.navbar-brand-footer {
-    font-size: 26px;
-}
-
-.container {
-    width: 90%;
-    margin-bottom: 10px;
-
-}
-
-html { 
-	height: 100%;
-	background-color: #9ec49d;
-}
-
-body {
-	height: 100%; 
-	margin: 0px; 
-	padding: 0px; 
-	font-family:"arial", helvetica; 
-	color:#000000; 
+    padding-right: 10px;
+    padding-top: 10px;
 }
 
 
@@ -130,6 +101,7 @@ body {
 <script>
 
     "use strict";
+    
     const trailslist = {{ trailslist|tojson }};
 
     let markers = [];
@@ -269,6 +241,16 @@ body {
 
         return marker;
     }
+
+    var fullHeight = function() {
+
+        $('.js-fullheight').css('height', $(window).height());
+        $(window).resize(function(){
+            $('.js-fullheight').css('height', $(window).height());
+        });
+
+    };
+    fullHeight();
 
 </script>
 
