--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
 
 
 {% block body %}
-  <h1 class="title">Portland Trails</h1>
+  <img src="images/logo.png" width="25%" height="40%" style="display:block; margin: 0 auto 0 auto">
 
   <section class="ftco-section">
 		<div class="container">
@@ -22,21 +22,20 @@
           <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
         </div>
         <div class="form-group">
-          <button type="submit" style="width: 20%" class="form-control btn btn-primary submit px-3">Sign Up</button>
+          <button type="submit" style="width: 18%" class="form-control btn btn-primary submit px-3">Sign Up</button>
         </div>
       </form>
-     <br></br>
       <h2 class="heading-section">Log In</h2>
       <form action="/login" style="text-align:center" class="signin-form" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Username" name="email" required>
+          <input type="text" class="form-control" placeholder="Email" name="email" required>
         </div>
         <div class="form-group">
           <input id="password-field" type="password" class="form-control" placeholder="Password" name="password" required>
           <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
         </div>
         <div class="form-group">
-          <button type="submit" style="width: 20%" class="form-control btn btn-primary submit px-3">Sign In</button>
+          <button type="submit" style="width: 18%" class="form-control btn btn-primary submit px-3">Sign In</button>
         </div>
       </form>
     </div>
