--- a/templates/map.html
+++ b/templates/map.html
@@ -6,7 +6,7 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 
 <div class="title">
-    <h1>Portland Trails</h1>
+    <img src="images/logo.png" width="15%" height="25%" style="display:block; margin: 0 auto 0 auto">
     
     <div class="logoutButton">
         <form action="/logout">
@@ -19,13 +19,13 @@
     <div style="width: 100%; height: 45px; display:block; padding-bottom: 0px;">
         <!-- Trail Dropdown -->
         <label for="trail">Trail Name:</label>
-        <select name="filter" id="Top_Trail_Name">
+        <select name="filter" class="col-1" id="Top_Trail_Name">
             <option value="select">Select</option>
         </select>
 
         <!-- Difficulty Dropdown -->
         <label for="difficulty">Difficulty:</label>
-            <select name="filter" id="Difficulty">
+            <select name="filter" class="col-1" id="Difficulty">
                 <option value="easy">Select</option>
                 <option value="easy">Easy</option>
                 <option value="moderate">Moderate</option>
@@ -34,21 +34,21 @@
 
         <!-- Length Dropdown -->
         <label for="length">Length:</label>
-        <input type="range" min="1" max="3000" value="1500" class="slider" name="filter" id="Length">
+        <input type="range" min="1" max="3000" value="1500" class="slider col-1" name="filter" id="Length">
         
         
 
         <!-- Elevation Bar -->
         <label for="elevation">Elevation:</label>
-        <input type="range" min="1" max="5000" value="5000" class="slider" name="filter" id="Elevation">
+        <input type="range" min="1" max="5000" value="5000" class="slider col-1" name="filter" id="Elevation">
 
         <!-- Time Bar -->
-        <label for="time">Time:</label>
-        <input type="range" min="1" max="10" value="10" class="slider" name="filter" id="Time">
+        <label for="time" id="TimeLabel">Time:</label>
+        <input type="range" min="1" max="10" value="10" class="slider col-1" name="filter" id="Time">
 
         <!-- Route Type Dropdown -->
         <label for="route type">Route Type:</label>
-        <select name="filter" id="RouteType">
+        <select name="filter" class="col-1"id="RouteType">
             <option value="loop">Select</option>
             <option value="loop">Loop</option>
             <option value="o">Out and Back</option>
@@ -62,7 +62,7 @@
 
 <!-- Trail Review Section -->
 
-<h5 class="title" style = "padding-top: 10px;">Submit Review</h5>
+<h5 class="title" style = "padding-top: 8px;">Submit Review</h5>
 <form style="text-align:center; width: 85%; margin-left: auto; margin-right: auto;" action="/review" method="POST">
     <div class="form-group">
         <select placeholder="Select Trail Name" class="form-control" name="filter" id="Bottom_Trail_Name">
@@ -154,7 +154,7 @@
 <script>
 
     "use strict";
-    
+
     const trailslist = {{ trailslist|tojson }};
 
     let markers = [];
